fix padding and alignment for close button in alert dialog

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -780,3 +780,6 @@ a.text-primary:hover {
 .modal {
   animation: fadeInBackground 1s forwards;
 }
+.modal-header {
+  align-items: start;
+}
